--- a/style.css
+++ b/style.css
@@ -1,89 +1,149 @@
-body {
-    overflow-x: hidden;
-  }
-  
-  
-  .jumbotron{
-   background-image: radial-gradient(
-       rgba(45, 43, 175, 0),
-       rgba(44, 24, 131, 0.25),
-       rgba(20, 18, 161, 0.25),
-       rgba(21, 8, 131, 0.25),
-       rgba(0,0,0,0)
-   ),
-   url('assets/nyc.jpg');
-      color: white;  
-      background-size: cover;
-      height: 100vh;
-  }
-  
-  .card {
-   position: relative;
-   top:-300px;
-   left:550px;
-   height:250px;
-  
-  }
-  
-  .fluid-image{
-    position: relative;
-    top:100px;
-    left:300px;
-  }
-  
-  .bground1 {
-    position:relative;
-    width: 100%;
-    height:400px;
-    background: #E8EAF6 ;
-  }
-  
-  .bground2 {
-    position: relative;
-    width:100%;
-    height:400px;
-    background: #9FA8DA ;
-  }
-  
-  .bground2::before {
-    content:"";
-    width: 100%;
-    height: 200px;
-    position: absolute;
-    top: -48px;
-    left: 0;
-    background: #9FA8DA;
-    transform: skewY(2deg);
-  }
-  
-  .bground2::before {
-    content:"";
-    width: 100%;
-    height: 200px;
-    position: absolute;
-    top: -48px;
-    right: 0;
-    background: #9FA8DA;
-    transform: skewY(-2deg);
-  }
-  
-  .card1{
-    position: relative;
-    top:0;
-    left:15px;
-  }
-  
-  h2{
-    position: relative;
-    top:0px;
-    left:15px;
-  }
-  
-  .contact{
-    position: relative;
-    top:0px;
-    left:20px;
-    width:50%;
-  }
-  
-  
+/*Start global*/
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 10px;
+  font-family: 'Roboto', sans-serif;
+  color: #eee;
+}
+
+body{
+  width: 100%;
+  height: 100%;
+  background: url("assets/background.jpg") no-repeat center fixed;
+  background-size: cover;
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
+}
+
+p{
+  font-size: 1.8rem;
+  font-weight: 300;
+}
+
+img{
+  width: 100%;
+}
+/*End global*/
+
+/*Start reusable*/
+/*End reusable*/
+
+/*Start header*/
+header{
+  width: 100%;
+  height: 100vh;
+}
+
+.top-nav{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: -100vh;
+  background-color: #16162d;
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 100%;
+  transition: all 650ms cubic-bezier(1,0,0,1);
+}
+
+.nav-list{
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+li{
+  margin: 0 2rem;
+}
+
+.nav-link{
+  font-family:sans-serif;
+  font-size: 5rem;
+  padding: 1rem;
+}
+
+.nav-link:hover,
+.nav-link:focus{
+  background: linear-gradient(to top, #0BF4EE,#177BBA);
+  background-clip: text;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* When nav is open */
+.top-nav.open{
+  top: 0;
+  border-radius: initial;
+}
+
+.menu-toggler{
+  position: absolute;
+  top: 5rem;
+  right: 5rem;
+  width: 5rem;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  z-index: 1500;
+  transition: transform 650ms ease-out;
+}
+
+.menu-toggler.open{
+  transform: rotate(-45deg);
+}
+/* bar = menu toggler */
+.bar{
+  background: linear-gradient(to right, #0BF4EE,#177BBA);
+  width: 100%;
+  height: 8px;
+  border-radius: .4rem;
+}
+
+/* effect for menu toggler */
+.bar.half{
+  width: 50%;
+}
+
+.bar.start{
+  transform-origin: right;
+  transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+}
+
+.open .bar.start{
+  transform: rotate(-450deg) translateX(.8rem);
+}
+
+.bar.end{
+  align-self: flex-end;
+  transform-origin: left;
+  transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+}
+
+.open .bar.end{
+  transform: rotate(-450deg) translateX(-.8rem);
+}
+/*End header*/
+
+/*Start about*/
+/*End about*/
+
+/*Start portfolio*/
+/*End services*/
+
+/*Start contact*/
+/*End contact*/
+
+/*Start footer*/
+/*End footer*/
