--- a/style.css
+++ b/style.css
@@ -162,10 +162,10 @@ user-select: none;
 z-index: 1;
 }
 
-.landing-text h6{
+/* .landing-text h6{
   font-size: 2rem;
   font-weight: 300;
-}
+} */
 /*End header*/
 
 /*Start about*/
