--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body{
   background-size: cover;
 }
 
+section{
+  padding: 6rem;
+}
+
 a{
   text-decoration: none;
   color: #eee;
@@ -34,6 +38,59 @@ img{
 /*End global*/
 
 /*Start reusable*/
+.container{
+  width: 90%;
+  max-width: 120rem;
+  height:100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.section-heading{
+  text-align: center;
+  margin-bottom: 10rem;
+}
+
+.section-heading h1{
+  font-size: 3.5rem;
+  color: rgba(255,255,255, .3);
+  text-transform: uppercase;
+  font-weight: 300;
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.section-heading h1::before,
+.section-heading h1::after{
+ content: "";
+ position: absolute;
+ bottom: -.5rem;
+ left: 50%;
+ transform: translateX(-50%);
+ background-color: rgba(255,255,255, .75);
+}
+
+.section-heading h1::before{
+  width: 10rem;
+  height: 3px;
+  border-radius: .8rem;
+}
+
+.section-heading h1::after{
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 100%;
+  bottom: -1rem;
+}
+
+.section-heading h6{
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+
+.has-margin-right{
+  margin-right:5rem;
+}
 /*End reusable*/
 
 /*Start header*/
@@ -169,10 +226,98 @@ user-select: none;
 /*End header*/
 
 /*Start about*/
+.about .container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-heading{
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 0;
+  margin-bottom: 6rem;
+}
+
+.about-heading h1{
+  font-size: 10rem;
+  opacity: .3;
+}
+
+.about-heading h6{
+  font-size: 2rem;
+  font-weight: 300;
+  opacity: .6;
+}
+
+.profile-img{
+  flex: 1;
+  margin-right: 5rem;
+}
+
+.about-details{
+  flex: 1;
+}
+
+.social-media{
+  margin-top: 5rem;
+}
+
+.social-media i{
+  font-size: 5rem;
+  transition: color 650ms;
+}
+
+.fa-linkedin:hover{
+  color: #0077b5;
+}
+
+.fa-github-square:hover{
+  color: #959da5;
+}
+
+.fa-file-pdf:hover{
+  color: #ff0000;
+}
 /*End about*/
 
 /*Start portfolio*/
-/*End services*/
+.portfolio-item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
+
+.portfolio-item:last-child{
+  margin-bottom: 0;
+}
+
+.portfolio-img{
+  width: 50rem;
+  flex: 1;
+}
+
+.portfolio-description{
+  flex: 1;
+}
+
+.portdolio-description h1{
+  font-size: 3rem;
+  font-weight: 300;
+  margin: 1rem 0;
+  
+}
+
+.portdolio-description h6{
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  opacity: 0.3;
+}
+
+
+/*End portfolio*/
 
 /*Start contact*/
 /*End contact*/
