--- a/style.css
+++ b/style.css
@@ -302,25 +302,117 @@ user-select: none;
   flex: 1;
 }
 
-.portdolio-description h1{
+.portfolio-description h1{
   font-size: 3rem;
   font-weight: 300;
   margin: 1rem 0;
   
 }
 
-.portdolio-description h6{
+.portfolio-description h6{
   font-size: 1.5rem;
   text-transform: uppercase;
   font-weight: 300;
   opacity: 0.3;
 }
 
+.portfolio-description .cta{
+  display: inline-block;
+  margin-top: 2.5rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  color: #3883ff;
+  transition: color 650ms;
+}
 
+.portfolio-description .cta:hover{
+  color: #2f67cd;
+}
 /*End portfolio*/
 
 /*Start contact*/
+.contact{
+  background-color: #221e3f;
+}
+
+form{
+  width: 70%;
+  margin: 0 auto;
+}
+
+form label{
+  font-size: 1.5rem;
+}
+
+input,
+select,
+textarea{
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 5px;
+  border: none;
+  outline-color: #CB0BF4;
+}
+
+button{
+  width: initial;
+  background-color: #CB0BF4;
+  color: #eee;
+  padding: 1rem 2rem;
+  border-radius: .8rem;
+  border: none;
+  cursor: pointer;
+  transition: background-color 650ms;
+}
+
+button:hover{
+  background-color: #177BBA;
+}
 /*End contact*/
 
 /*Start footer*/
+.copyright{
+  width:100%;
+  text-align: center;
+  background-color: #16162d;
+  padding: 2rem 0;
+  position: relative;
+}
+
+/* chevron icon to scroll back to top */
+
+.up{
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  background-color: #eee;
+  top: -2.5rem;
+  right: 5rem;
+  border-radius: 100%;
+  display: flex;
+  animation: pulse 2.5s infinite;
+}
+
+.up i{
+  color: #16162d;
+  font-size: 2rem;
+  margin: auto;
+}
+
+.copyright{
+  font-size: 1.4rem;
+}
 /*End footer*/
+
+/* Start Animation for icon */
+@keyframes pulse{
+  0%{
+    box-shadow: 0 0 0 0 rgba(203, 11, 244, 0.99);
+  }
+  70%{
+    box-shadow: 0 0 0 2rem rgba(203, 11, 244, 0);
+  }
+  100%{
+    box-shadow: 0 0 0 2rem rgba(203, 11, 244, 0);
+  }
+}
