--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 section{
-  padding: 6rem;
+  padding: 6rem 0;
 }
 
 a{
@@ -332,7 +332,9 @@ user-select: none;
 
 /*Start contact*/
 .contact{
-  background-color: #221e3f;
+  background-color: #00003a;
+ 
+  
 }
 
 form{
@@ -391,6 +393,7 @@ button:hover{
   border-radius: 100%;
   display: flex;
   animation: pulse 2.5s infinite;
+  cursor: pointer;
 }
 
 .up i{
@@ -404,7 +407,7 @@ button:hover{
 }
 /*End footer*/
 
-/* Start Animation for icon */
+/* Start animation for icon */
 @keyframes pulse{
   0%{
     box-shadow: 0 0 0 0 rgba(203, 11, 244, 0.99);
@@ -415,4 +418,112 @@ button:hover{
   100%{
     box-shadow: 0 0 0 2rem rgba(203, 11, 244, 0);
   }
+}
+/* End animation */
+
+/*media queries make site resposive*/
+
+@media screen and (max-width: 768px) {
+  body{
+    background: url("assets/background.jpg") no-repeat center fixed;
+    background-size: cover;
+  }
+
+  .landing-text h1{
+    font-size: 15rem;
+  }
+
+  .landing-text h6{
+    font-size: 1.7rem;
+  }
+
+  .nav-list{
+    flex-direction: column;
+  }
+
+  li{
+    margin: 2rem 0;
+  }
+
+  .nav-link{
+    font-size: 4.5rem;
+  }
+
+  .about-heading h1{
+    font-size: 8rem;
+  }
+
+  .section-heading h1{
+    font-size: 3rem;
+  }
+
+  .about-details .nav-list{
+    flex-direction: initial;
+  }
+
+  .about-details li{
+    margin: 0 2rem;
+  }
+
+  .icon-container{
+    width: 7rem;
+    height: 7rem;
+  }
+
+  .icon-container i{
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  
+  .menu-toggler{
+    top: 2rem;
+    right: 2rem;
+  }
+
+  .landing-text h1{
+    font-size: 8rem;
+  }
+
+  .landing-text h6{
+    font-size: 1.4rem;
+  }
+
+  .nav-link{
+    font-size: 3.5rem;
+  }
+
+  .about .container{
+    flex-direction: column;
+  }
+
+  .profile-img{
+    margin: 0 0 7rem 0;
+  }
+
+  .portfolio-item{
+    flex-direction: column;
+  }
+
+  .portfolio-img{
+    margin: 0 0 2rem 0;
+    order: 1;
+  }
+
+  .portfolio-description{
+    margin: 0;
+    order: 2;
+  }
+
+  form{
+    width: 100%;
+  }
+
+  .up{
+    right: 2rem;
+  }
+
+
+
 }
